# NFM-Eval-Harness

./: .gitignore  AGENTS.md  CLAUDE-claude.md  CLAUDE-gpt.md  CLAUDE.md  CLAUDE_INITIAL_PROMPT.md  ENVIRONMENT.md  EXPERIMENTS.md  FINAL_DELIVERY_SUMMARY.md  FIRST_PROMPT-claude.md  FIRST_PROMPT.md  GSMA_SCORING_CONTRACT.md  HANDOFF-claude.md  HANDOFF.md  HANDOFF_NFM_EVAL_HARNESS.md  HANDOFF_POINTER.md  INL_HANDOFF.md  Makefile  PACKAGING_CHECKLIST.md  PLAN.md  PROGRESS.md  README.md  RELEASE_NOTES.md  REPRODUCTION_NOTES.md  RESULTS_MANIFEST.md  START_HERE_ENGINEERING.md  TASK_MANIFEST.md  TROUBLESHOOTING.md  lm-eval-ls-task  print-files.sh  pyproject.toml  reset-main.sh  run_open_telco_otfull.sh  run_open_telco_otlite.sh  setup-main.sh  setup-post.sh  setup-pre.sh  version-dep.txt
chat/: 0626-PR1.md  0627-PR2a.md  0627-PR2b.md  CLAUDE_WORKLOG.md  PR-6th-complete.md
doc/: LM-Evaluation-Harness.md
docs/: CLAUDE_WORKLOG.md  ENVIRONMENT.md  EXPERIMENTS.md  HANDOFF.md  PLAN.md  PROGRESS.md  REPRODUCTION_NOTES.md  TROUBLESHOOTING.md  archive-history-index.md  engineering-repo-map.md  lm-evaluation-harness-reference.md
open_telco_lm_eval/: README.md
outputs/: README.md  falcon3-10b-otfull-gsma-delta.md  falcon3-10b-otlite-gsma-delta.md  gemma2-9b-otfull-gsma-delta.md  gemma3-12b-otfull-gsma-delta.md  gemma3-12b-otlite-gsma-delta.md  gemma3-27b-otfull-gsma-delta.md  gemma3-4b-leaderboard-delta.md  gemma3-4b-otfull-gsma-delta.md  gemma3-4b-otfull-leaderboard-delta.md  gemma3-4b-otlite-gsma-delta.md  latest-summary.md  mistral-nemo-12b-otfull-gsma-delta.md  run-index.jsonl  (+11 more)
(+83 files in other folders)
