[project]
name = "NFM-Eval-Harness"
version = "2026.6"
description = ""
authors = [
    { name = "chrisjihee", email = "chrisjihee@etri.re.kr" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "sentence-transformers==5.5.1",
    "transformers==5.10.2",
    "bitsandbytes==0.49.2",
    "accelerate==1.13.0",
    "vllm==0.22.1",
    "peft==0.19.1",
    "trl==1.5.1",

    "huggingface-hub",
    "sentencepiece",
    "torchmetrics",
    "tensorboard",
    "tiktoken",
    "evaluate",
    "datasets",
    "pyarrow",
    "seqeval",

    "bs4",
    "nltk",
    "pytest",
    "pandas",
    "xgboost",
    "lightgbm",
    "pydantic",
    "matplotlib",
    "scikit-learn",

    "openai",
    "together",
    "jupyter",
    "ipywidgets",

    "pypdf",
    "pymupdf",
    "python-pptx",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
